feat: backend and frontend connection

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,32 @@
+@font-face {
+  font-family: "TitleFont";
+  src: url("./assets/fonts/Momo.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "DefaultFont";
+  src: url("./assets/fonts/Poppins-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "DefaultFont", sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.custom-font {
+  font-family: "TitleFont", sans-serif;
 }
+
+.custom-btn {
+  border-radius: 8px !important; 
+  font-family: "TitleFont", sans-serif;
+}
+
+
+
